# Potential-Field-Obstacle-Avoidance

./: .gitignore  README.md
box_bot_sim/: CMakeLists.txt  package.xml
box_bot_sim/config/: bridge.yaml
box_bot_sim/launch/: sim.launch.py
box_bot_sim/scripts/: robot_move.py
box_bot_sim/urdf/: box_bot.urdf.xacro  lidar.xacro
box_bot_sim/worlds/: myworld.sdf  obstacles.sdf
fws_robot_description/: CMakeLists.txt  package.xml
fws_robot_description/config/: fws_robot_sim.yaml
fws_robot_description/gazebo/: fws_robot.gazebo.xacro
fws_robot_description/robots/: fws_robot.urdf.xacro
fws_robot_description/robots/parts/base/: base.urdf.xacro
fws_robot_description/robots/parts/lidar_base/: lidar_base.urdf.xacro
fws_robot_description/robots/parts/lidar_head/: lidar_head.urdf.xacro
fws_robot_description/robots/parts/suspension/: suspension.urdf.xacro
fws_robot_description/robots/parts/wheel/: wheel.urdf.xacro
fws_robot_description/ros2_control/: fws_robot.ros2_control.xacro
fws_robot_sim/: CMakeLists.txt  package.xml
fws_robot_sim/launch/: fws_robot_spawn.launch.py
velocity_pub/: CMakeLists.txt
velocity_pub/launch/: four_ws_control.launch.py
velocity_pub/scripts/: robot_control.py
